--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 
    
 
-        <button class="header-action-btn" aria-label="open menu" data-nav-toggler>
+        <div class="header-action-btn" aria-label="open menu" data-nav-toggler>
           <i class="fa-solid fa-bars"></i>
-        </button>
+        </div>
 
       </div>
 
@@ -247,9 +247,11 @@
       -->
 
       <section class="section hero"  >
-          <div class="banner">
-            <img src="./assets/images/home_about_1_image.jpg" alt="banner">
-          </div>
+        <div class="banner owl-carousel owl-theme">
+          <div class="item"><img src="./assets/images/banner-home.jpg" alt="banner"></div>
+          <div class="item"><img src="./assets/images/banner-home2.jpg" alt="banner"></div>
+          <div class="item"><img src="./assets/images/banner-home3.png" alt="banner"></div>
+      </div>
       </section>
 
 
@@ -291,6 +293,9 @@
 
            <!-- Listing product -->
            <div class="listing-product">
+            <div class="title-product-1">
+              <h1>Our Favorites</h1>
+            </div>
             <div class="container">
               <div class="row">
                 <div class="col-12 col-sm-12 col-md-12 btn-list">
