--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <span class="switcher-title">Language: </span>
                 <div class="switcher-menu">
                     <ul>
-                        <li><a href="#">English</a>
+                        <li><a href="#">English <i class="fa-solid fa-caret-down"></i></a>
                             <ul class="switcher-dropdown">
                                 <li><a href="#">German</a></li>
                                 <li><a href="#">French</a></li>
@@ -242,7 +242,7 @@
                 <span class="switcher-title">Currency: </span>
                 <div class="switcher-menu">
                     <ul>
-                        <li><a href="#">$ USD</a>
+                        <li><a href="#">$ USD <i class="fa-solid fa-caret-down"></i></a>
                             <ul class="switcher-dropdown">
                                 <li><a href="#">€ EUR</a></li>
                             </ul>
